# homoGBA

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.c
include/: apu.h  cartridge.h  cpu-arm.h  cpu-isa.h  cpu.h  gba.h  homolog.h  int.h  macros.h  memory.h  ppu.h  timer.h
src/: CMakeLists.txt  apu.c  arm_table_generator.h  cartridge.c  cpu-arm.c  cpu-thumb.c  cpu.c  gba.c  int.c  memory.c  ppu.c  timer.c  version.c
test/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  one_plus_one.cxx
tools/: CMakeLists.txt
tools/disas/: Makefile  disas.c  link.ars  test.c
tools/disas/include/: disas.h
tools/homolog/: CMakeLists.txt  homolog.c
tools/log/: CMakeLists.txt
